/exec API: drop session reconnection support (#487)
